@@ -1,3 +1,4 @@
+
 # JavaMasterClass 🧑‍💻
 
 This repository contains my personal notes, exercises, and projects from the [Java Programming Masterclass for Software Developers](https://www.udemy.com/course/java-the-complete-java-developer-course/) by Tim Buchalka on Udemy. It serves as both a study log and a resource for reinforcing core Java concepts through hands-on code.
@@ -42,3 +43,103 @@ JavaMasterClass/
 ├── .gitignore
 ├── README.md
 └── JavaMasterClass.iml
+```
+
+---
+
+## 🛠️ Technologies Used
+
+- **Java 17+**
+- **IntelliJ IDEA**
+- **JavaFX SDK**
+- **JUnit 5**
+- **PostgreSQL**
+- **Maven**
+
+---
+ 
+## 🚀 How to Run the Code
+
+### ✅ Prerequisites
+
+- JDK 17 or higher installed
+- JavaFX SDK (for GUI apps)
+- IntelliJ IDEA (recommended)
+- MySQL or PostgreSQL for database modules
+
+### 🧪 Run a Basic Program
+
+```bash
+cd src/basics
+javac HelloWorld.java
+java HelloWorld
+```
+
+### 🖼️ Run JavaFX App (Example)
+
+1. Make sure JavaFX is installed.
+2. Use IntelliJ’s run configuration with VM options:
+
+```text
+--module-path /path/to/javafx-sdk-17/lib --add-modules javafx.controls,javafx.fxml
+```
+
+---
+
+## 🧠 What I’m Learning
+
+- Building strong Java fundamentals with clean, modular code
+- Understanding Java memory management, data structures, and OOP principles
+- Creating GUI applications with responsive UIs
+- Connecting Java apps to real databases
+- Writing maintainable and testable code with unit testing
+- Managing concurrency using Java threads and synchronization
+- Preparing for job interviews and OCP Java certification
+
+---
+
+## ✅ Completed Milestones
+
+- [x] Java fundamentals
+- [ ] Object-Oriented Programming
+- [ ] Collections and generics
+- [ ] File handling and exceptions
+- [ ] JavaFX applications
+- [ ] JDBC database interaction
+- [ ] Unit testing with JUnit
+- [ ] Java multithreading
+- [ ] Final capstone project
+
+---
+
+## 📸 Screenshots
+
+> Coming soon! I'll upload JavaFX UI screenshots and console outputs as I complete each major module.
+
+---
+
+## 📌 Resources
+
+- [Java Masterclass on Udemy](https://www.udemy.com/course/java-the-complete-java-developer-course/)
+- [Java Documentation](https://docs.oracle.com/en/java/)
+- [JavaFX Documentation](https://openjfx.io/)
+- [JUnit 5 User Guide](https://junit.org/junit5/docs/current/user-guide/)
+
+---
+
+## 📄 License
+
+This repository is intended for educational and non-commercial use only. Course content copyright © Tim Buchalka.
+
+---
+
+## 🙌 Acknowledgements
+
+Thanks to **Tim Buchalka**, **Jean-Paul Roberts**, and the Udemy team for creating such a powerful, long-running, and regularly updated Java resource.
+
+---
+
+## 👨‍💻 Author
+
+**Bek the Dev**  
+GitHub: [@bekthedev](https://github.com/bekthedev)
